--- a/examples/notebooks/langchain/Langchain-PgVector-Ingest-test.ipynb
+++ b/examples/notebooks/langchain/Langchain-PgVector-Ingest-test.ipynb
@@ -57,8 +57,8 @@
     "product_version = 4.14\n",
     "#language = en-us\n",
     "#product_name = red_hat_openshift_ai_self-managed\n",
-    "lang = ko-kr\n",
-    "product_name = openshift_container_platform\n",
+    "lang = \"ko-kr\"\n",
+    "product_name = \"openshift_container_platform\"\n",
     "CONNECTION_STRING = \"postgresql+psycopg://user:password@postgresql-server:5432/vectordb\"\n",
     "COLLECTION_NAME = f\"rhocp-doc-{product_version}\""
    ]
